# pulsemeeter

./: .gitignore  Interface.glade  LICENSE  MANIFEST.in  README.md  __init__.py  build_translations.sh  config.json  createPR.txt  dev-requirements.txt  highlight.css  interface.py  main.py  makefile  pmctl  pulse.py  pulsemeeter  pulsemeeter.desktop  pulsemeeter.py  pulsemeeter.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aur-publish-git.yml  aur-publish-stable.yml  aur-publish-test.yml  build-test.yml  create_pkgbuild.yml  i18n-check.yml  main.yml  publish-stable.yml  pylint.yml  python-publish.yml  test.yml
meexer/: __init__.py  main.py  settings.py
meexer/api/: app_api.py  device_api.py  server_api.py
meexer/controller/: audio_client.py  audio_server.py
meexer/interface/: app_api.py  device_api.py  main_window.py  vumeter_widget.py
meexer/ipc/: client.py  router.py  server.py
meexer/model/: app_model.py  config_model.py  device_model.py
meexer/schemas/: app_schema.py  connection_schema.py  device_schema.py  ipc_schema.py  requests_schema.py
meexer/scripts/: argparser.py  logger.py  pmctl.py
pulsemeeter/: AppListWidget.py  EqPopover.py  Interface.glade  JackGroupsPopover.py  LatencyPopover.py  MainWindow.py  PortSelectPopover.py  PortSelectPopoverRadio.py  Pulse.py  RnnoisePopover.py  Socket.py  __init__.py  __main__.py  config.json  logger.py  main.py  settings.py
pulsemeeter/api/: audio_client.py  audio_server.py  (+1 more)
scripts/: pmctl
(+290 files in other folders)
