[metadata]
name = pulsemeeter
version = attr: pulsemeeter.__version__
description = A pulseaudio audio routing application
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Carneiro
author_email = therealcarneiro@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/theRealCarneiro/pulsemeeter
keywords = audio, mixing, mixer
classifiers =
    Programming Language :: Python :: 3
	Environment :: X11 Applications
	License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt
scripts = src/scripts/pmctl
package_dir = 
	= src

[options.entry_points]
console_scripts = 
	pulsemeeter = pulsemeeter.main:main

[options.packages.find]
where=src

[pylint.MAIN]
init-hook = from gi import require_version; require_version('Gtk', '3.0')
load-plugins = pylint_pydantic
extension-pkg-whitelist = pydantic
fail-under = 8

[pylint.REPORTS]
output-format = colorized

[pylint.DESIGN]
max-args = 10
max-attributes = 10

[pylint.FORMAT]
max-line-length = 120
max-module-lines = 15000

[pylint]
disable = missing-module-docstring, missing-function-docstring, missing-class-docstring, no-member, no-name-in-module, too-few-public-methods

[flake8]
max-line-length = 120
